--- a/strings/langs/pa.yml
+++ b/strings/langs/pa.yml
@@ -84,7 +84,7 @@ admin_39 : "• ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ"
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ"
 
 start_1 : "{0} ɪs ᴀʟɪᴠᴇ ʙᴀʙʏ\n\n<b>✫ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "<b>нєу 💐</b>\n\nᴛʜɪs ɪs {1} ❄️\n\n ᴀ ʟᴀɢ ꜰʀᴇᴇ & ꜰᴀꜱᴛᴇꜱᴛ ᴀɴᴅ ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs\n\n<b><u>Sᴜᴘᴘᴏʀᴛᴇᴅ Pʟᴀᴛғᴏʀᴍs :</b></u> ʏᴏᴜᴛᴜʙᴇ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ, ᴀᴘᴘʟᴇ ᴍᴜsɪᴄ ᴀɴᴅ sᴏᴜɴᴅᴄʟᴏᴜᴅ\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ & ᴄᴏᴍᴍᴀɴᴅꜱ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ʙᴏᴛ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs ☁️</b>"
+start_2 : "<b>нєу 💐</b>\n\nᴛʜɪs ɪs {1} ❄️\n\nᴀ ꜱᴇᴀᴍʟᴇꜱꜱ, ᴜʟᴛʀᴀ-ꜰᴀꜱᴛ, ᴀɴᴅ ʀᴏʙᴜꜱᴛ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜꜱɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ᴘᴀᴄᴋᴇᴅ ᴡɪᴛʜ ᴀᴍᴀᴢɪɴɢ ꜰᴇᴀᴛᴜʀᴇꜱ.\n\n<b><u>Sᴜᴘᴘᴏʀᴛᴇᴅ Pʟᴀᴛғᴏʀᴍs :</b></u> ʏᴏᴜᴛᴜʙᴇ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ, ᴀᴘᴘʟᴇ ᴍᴜsɪᴄ ᴀɴᴅ sᴏᴜɴᴅᴄʟᴏᴜᴅ\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ꜰᴏʀ Qᴜɪᴄᴋ ɪɴꜰᴏ ᴏɴ ʙᴏᴛ ᴍᴏᴅᴜʟᴇꜱ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅꜱ, ᴄʟɪᴄᴋ ʜᴇʟᴘ & ᴄᴏᴍᴍᴀɴᴅꜱ. ☁️</b>"
 start_3 : "ʜᴇʏ {0},\nᴛʜɪs ɪs {1} ❄️\n\nᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ"
 start_4 : "✨ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> ✨\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ"
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ</a>"
@@ -134,7 +134,7 @@ cplay_5 : "ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ"
 cplay_6 : "• ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "• ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ"
 
-play_1 : "✨"
+play_1 : "🌩"
 play_2 : "<b> ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "• ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ"
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -173,19 +173,19 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ"
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n✨ <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b>ᴍᴜꜱɪᴄ ꜱᴇꜱꜱɪᴏɴ ꜱᴛᴀʀᴛᴇᴅ 🎶</b>\n<b>ʟᴇᴛ'ꜱ ᴄʀᴇᴀᴛᴇ ᴜɴꜰᴏʀɢᴇᴛᴛᴀʙʟᴇ ᴍᴜꜱɪᴄᴀʟ ᴍᴏᴍᴇɴᴛꜱ ᴛᴏɢᴇᴛʜᴇʀ</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• ɴᴏᴡ ꜱᴛʀᴇᴀᴍɪɴɢ :</b> <a href={0}>{1}</a>\n<b>• ᴅᴜʀᴀᴛɪᴏɴ : {2} ᴍɪɴ</b>\n<b>• ꜱᴇʟᴇᴄᴛᴇᴅ ʙʏ : {3}</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴊᴏɪɴ ᴛʜᴇ ᴠɪᴅᴇᴏ ᴄʜᴀᴛ ᴀɴᴅ ʟᴇᴛ'ꜱ ᴇɴᴊᴏʏ ᴛʜᴇ ᴍᴜꜱɪᴄ ᴛᴏɢᴇᴛʜᴇʀ</b>\n<b>ᴅɪꜱᴄᴏᴠᴇʀ ᴛʜᴇ ᴍᴀɢɪᴄ ᴏꜰ ᴇᴀᴄʜ ᴛʀᴀᴄᴋ ᴀꜱ ᴡᴇ ᴇxᴘʟᴏʀᴇ ᴀ ᴠᴀʀɪᴇᴛʏ ᴏꜰ ꜱᴏᴜʟꜰᴜʟ ᴍᴇʟᴏᴅɪᴇꜱ ᴛʜʀᴏᴜɢʜᴏᴜᴛ ᴛʜᴇ ꜱᴇꜱꜱɪᴏɴ 💗</b>"
+stream_1 : "<b>ᴍᴜꜱɪᴄ ꜱᴇꜱꜱɪᴏɴ ꜱᴛᴀʀᴛᴇᴅ ✨</b>\n<b>ʟᴇᴛ'ꜱ ᴛᴀᴋᴇ ᴀ ᴛʀɪᴘ ɪɴᴛᴏ ᴍᴜꜱɪᴄᴀʟ ᴇᴜᴘʜᴏʀɪᴀ</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• ɴᴏᴡ ꜱᴛʀᴇᴀᴍɪɴɢ :</b> <a href={0}>{1}</a>\n<b>• ᴅᴜʀᴀᴛɪᴏɴ : {2} ᴍɪɴ</b>\n<b>• ꜱᴇʟᴇᴄᴛᴇᴅ ʙʏ : {3}</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴊᴏɪɴ ᴛʜᴇ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ ᴛᴏ ᴜɴᴄᴏᴠᴇʀ ᴛʜᴇ ᴇɴᴄʜᴀɴᴛᴍᴇɴᴛ ᴏꜰ ᴇᴀᴄʜ ᴛʀᴀᴄᴋ ᴀꜱ ᴡᴇ ᴅᴇʟᴠᴇ ɪɴᴛᴏ ᴀ ʀᴀɴɢᴇ ᴏꜰ ʜᴇᴀʀᴛꜰᴇʟᴛ ᴍᴇʟᴏᴅɪᴇꜱ ᴅᴜʀɪɴɢ ᴛʜᴇ ꜱᴇꜱꜱɪᴏɴ 💕</b>"
 stream_2 : "<b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ</b>\n\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>• Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}\n➖➖➖➖➖➖➖➖➖➖➖"
 
 
-CLOSE_BUTTON  : "ᴄʟᴏsᴇ 🍁"
+CLOSE_BUTTON  : "ᴄʟᴏsᴇ 🍂"
 BACK_BUTTON : "ʙᴀᴄᴋ 🔙"
 
-S_B_1 : "ᴀᴅᴅ ᴍᴇ 🥀"
+S_B_1 : "ᴀᴅᴅ ᴍᴇ 🍁"
 S_B_2 : "ꜱᴜᴘᴘᴏʀᴛ ✨"
 S_B_3 : "ᴀᴅᴅ ᴍᴇ 🧸"
 S_B_4 : "ʜᴇʟᴘ & ᴄᴏᴍᴍᴀɴᴅꜱ 🚀"
-S_B_5 : "ᴏᴡɴᴇʀ 🕊️"
-S_B_6 : "ᴄʜᴀɴɴᴇʟ ❄️"
+S_B_5 : "ᴏᴡɴᴇʀ 🌿"
+S_B_6 : "ᴜᴘᴅᴀᴛᴇꜱ ❄️"
 S_B_7 : "ꜱᴏᴜʀᴄᴇ ᴄᴏᴅᴇ ☁️"
 S_B_8 : "ʏᴏᴜᴛᴜʙᴇ 👀"
 S_B_9 : "sᴜᴩᴩᴏʀᴛ 🥀"
@@ -206,6 +206,9 @@ H_B_12 : "Sʜᴜғғʟᴇ"
 H_B_13 : "Sᴇᴇᴋ"
 H_B_14 : "Sᴏɴɢ"
 H_B_15 : "Sᴘᴇᴇᴅ"
+H_B_16 : "Hɪꜱᴛᴏʀʏ"
+H_B_17 : "Tʀᴀɴꜱʟᴀᴛɪᴏɴ"
+H_B_18 : "Aꜰᴋ"
 
 P_B_1 : "ᴀᴜᴅɪᴏ"
 P_B_2 : "ᴠɪᴅᴇᴏ"
