--- a/strings/langs/pa.yml
+++ b/strings/langs/pa.yml
@@ -209,6 +209,9 @@ H_B_15 : "Sᴘᴇᴇᴅ"
 H_B_16 : "Aꜰᴋ"
 H_B_17 : "Hɪꜱᴛᴏʀʏ"
 H_B_18 : "Tʀᴀɴꜱʟᴀᴛɪᴏɴ"
+H_B_19 : "Sᴇᴀʀᴄʜ"
+H_B_20 : "Cʜᴀᴛʙᴏᴛ"
+H_B_21 : "Vɪᴅᴇᴏ"
 
 P_B_1 : "ᴀᴜᴅɪᴏ"
 P_B_2 : "ᴠɪᴅᴇᴏ"
